--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- start nav bar -->
 
-  <nav class="navbar navbar-expand-lg navbar-light position-relative">
+  <nav class="navbar navbar-expand-lg navbar-light position-relative mt-2">
 
     <div class="container">
         <img src="images/navlogo.png" alt="Logo" style="width: 180px;">
@@ -41,7 +41,7 @@
           </li>
         </ul>
         <br>
-        <a href="#" class="btn btn-custom rounded-pill px-4  ms-md-4   text-white">Get Started</a>
+        <a href="#" class="btn btn-custom rounded-pill px-4 ms-md-4 text-white">Get Started</a>
       </div>
     </div>
     <img src="images/gradiant1.png" class="position-absolute object-fit-cover z-n1" alt="">
@@ -49,7 +49,56 @@
   </nav>
 
   <!-- end navbar -->
+   <!-- start hero section -->
 
+   <section class="content-section position-relative ">
+    <img src="images/gradiant2.png" class="position-absolute object-fit-cover z-n1" alt="">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 content mt-md-5 ">
+                <div class="mt-md-5">
+                    <h1 class="fw-bold fs-1 mb-2">CAPTURING MOMENTS <span style="color: #8A47F6;">IN</span>  TIME<span > <img class=" mb-2"
+                        src="images/Rectangle 2.png" alt=""></span></h1>
+                    <p class="mb-3">A Glimpse into the Past, a Snapshot of the Present.</p>
+                    <button class="btn btn-custom rounded-pill px-5  text-white mt-3">Get Started</button>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active text-bg-danger " aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class=" text-bg-danger "  aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class=" text-bg-danger "  aria-label="Slide 3"></button>
+                    </ol>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/carousel-1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel-2.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel-3.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev " href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- end hero section -->
+
+    <!--  -->
 
 
 
@@ -67,6 +116,9 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
