--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-light position-relative mt-2">
 
     <div class="container">
-        <img src="images/navlogo.png" alt="Logo" style="width: 180px;">
+        <img src="images/navlogo.png" alt="Logo" style="width: 200px;">
 
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon "></span>
@@ -52,7 +52,7 @@
    <!-- start hero section -->
 
    <section class="content-section position-relative ">
-    <img src="images/gradiant2.png" class="position-absolute object-fit-cover z-n1" alt="">
+    <img src="images/gradiant2.png" class="position-absolute object-fit-cover z-n1 start-0" alt="">
 
     <div class="container">
         <div class="row">
@@ -99,18 +99,18 @@
     <!-- end hero section -->
 
     <!--  start about us section-->
-    <div style="background-color:rgba(138, 71, 246, 0.218); width: 100%;" class="mt-2">
+    <div style="background-color:rgba(138, 71, 246, 0.218); width: 100%;" class="mt-3 ">
         <div class="container"   >
-         <div class="row gap-5 gap-md-0 py-5">
-              <div class="col-12 col-md-6 div1 mt-5">
+            <div class="row gap-5 gap-md-0 py-5">
+                <div class="col-12 col-md-6 div1 mt-5">
                     <div class="div2">
-                        <img src="images/image-1.png" alt="">
+                        <img src="images/Rectangle 5.png" alt="">
                     </div >
                     <div class="div3">
-                        <img src="images/image-2.png" alt="">
+                        <img src="images/Rectangle 6.png" alt="">
                     </div>
                     <div class="div4">
-                        <img src="images/image-3.png" alt="">
+                        <img src="images/Rectangle 7.png" alt="">
                </div>
               </div>
 
@@ -132,6 +132,66 @@
         </div>
     </div>
 <!-- end about us section -->
+ <!-- start our portfolio -->
+
+ <div class="masterdiv mt-5 pt-5 position-relative">
+    <img src="images/Ellipse 9.png" class="position-absolute object-fit-cover z-n1 end-0 top-0 " alt="">
+
+    <h1 class="mainh1" style="text-align: center;">Our <span style="color: #8A47F6;"> Portfolio</span></h1>
+<div class="navbar navbar-light bg-white navbar-expand-lg w-75 w-sm-100  mx-auto shadow-lg  bg-body-tertiary rounded mainnav" style="background-color: #ffffff; ">
+    <div class="container  d-flex align-items-center justify-content-center mt-2">
+
+        <ul class="  d-flex align-items-lg-center gap-md-5 gap-sm-2 fs-5 list-unstyled mt-2 ">
+            <li class="nav-item me-md-4 ">All</li>
+            <li class="nav-item me-md-4 " style="color: #8A47F6;">Childrens</li>
+            <li class="nav-item me-md-4 ">Potraits</li>
+            <li class="nav-item me-md-4">Family</li>
+            <li class="nav-item me-md-4">Other Photography</li>
+        </ul>
+
+    </div>
+</div>
+
+<div class="container ">
+    <div class="row gap-5 gap-md-0 ms-md-4 ">
+        <div class="col-12 col-md-6 maindiv mt-5">
+            <div class="rec11">
+                <img src="images/Rectangle 11.png" alt="">
+            </div>
+            <div class="rec12">
+                <img src="images/Rectangle 12.png" alt="">
+            </div>
+            <div class="rec13">
+                <img src="images/Rectangle 13.png" alt="">
+            </div>
+            <div class="rec14">
+                <img src="images/Rectangle 14.png" alt="">
+            </div>
+            <div class="rec15">
+                <img src="images/Rectangle 15.png" alt="">
+            </div>
+            <div class="rec16">
+                <img src="images/Rectangle 17.png" alt="">
+            </div>
+            <div class="rec17">
+                <img src="images/Rectangle 16.png" alt="">
+            </div>
+
+            <div class="rec18">
+                <img src="images/Rectangle 18.png" alt="">
+            </div>
+            <div class="rec19">
+                <img src="images/Rectangle 19.png" alt="">
+            </div>
+            <div class="rec20">
+                <img src="images/Rectangle 20.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
+<!-- end our portfolio section -->
 
 
 
@@ -144,7 +204,7 @@
 
 
 
-
+<br><br><br><br><br>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
