--- a/index1.html
+++ b/index1.html
@@ -1,27 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Photography</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Creatives for you</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  </head>
+  <body>
 
 
 
+    <section class="mt-5">
+        <div class="position-relative">
+            <div class="container mx-auto">
+              <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-center">
+
+                <div>
+                  <h3 class="fw-bold fs-2" style="text-align: center;">
+                    PRICES
+                  </h3>
+
+                </div>
+
+              </div>
+
+              <div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between gap-4 pt-5 pb-5">
+                <div class=" p-4 bg-white rounded-4 shadow-lg position-relative" style="width: 380px; height: 410px;">
+                  <h5 class="fw-bold" style="text-align: center;">Children's photography /family/pregnancy/ loveshoot</h5>
+
+                  <p class=" pt-2 pb-2" style="text-align: center; font-size: 18px;">The price for this is €50.00 (incl. VAT) and takes approximately one hour.For that you get 10/15 edited digital files in large format.</p>
+                  <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" font-size: 45px; " >€50.00</h1>
+                  <button class="btn btn-danger position-absolute rounded-pill  " style="bottom: 30px; left: 90px ;">Get Purchase</button>
+                </div>
+
+                <div class=" p-4  rounded-4 shadow-lg position-relative text-white " style="width: 380px ; height: 410px; background-color: #222222;">
+                  <h5 class="fw-bold mt-2" style="text-align: center;">Lifestyle Photography</h5>
+                  <p class=" pt-4 pb-2 " style="text-align: center; font-size: 18px; color: #f1f1f1;">Lifestyle photography takes place at your home in a relaxed setting. The price for this depends on how long we take. Inquire about the possibilities.</p>
+                  <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" font-size: 45px; "  >€50.00</h1>
+                  <button class="btn btn-danger position-absolute rounded-pill ms-5" style="bottom: 30px; left: 40px ;" >Get Purchase</button>
+                </div>
+
+                <div class=" p-4 bg-white rounded-4 shadow-lg position-relative" style="width: 380px; height: 410px; ">
+                  <h5 class="fw-bold mt-2" style="text-align: center;">Potrait Photography</h5>
+                  <p class=" pt-5 pb-2" style="text-align: center; font-size: 18px;">Portrait photography and girlfriend shoots are also possible.</p>
+                  <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" >€50.00</h1>
+                  <button class="btn btn-danger position-absolute rounded-pill ms-5" style="bottom: 30px; left: 40px ;" >Get Purchase</button>
+                </div>
+              </div>
+            </div>
+            <img src="images/Decoration.png" class="position-absolute bottom-0 end-0 z-n1" alt="">
+          </div>
+    </section>
 
 
 
-    </style>
-</head>
-<body>
 
 
 
@@ -32,14 +67,6 @@
 
 
 
-
-
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
