--- a/index.html
+++ b/index.html
@@ -192,6 +192,51 @@
 
 </div>
 <!-- end our portfolio section -->
+ <!-- start price section -->
+
+ <section class="mt-5 pt-5">
+    <div class="position-relative">
+        <div class="container mx-auto">
+          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-center">
+
+            <div>
+              <h3 class="fw-bold fs-2" style="text-align: center;">
+                PRICES
+              </h3>
+
+            </div>
+
+          </div>
+
+          <div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between gap-4 pt-5 pb-5">
+            <div class=" p-4 bg-white rounded-4 shadow-lg position-relative" style="width: 380px; height: 410px;">
+              <h5 class="fw-bold" style="text-align: center;">Children's photography /family/pregnancy/ loveshoot</h5>
+
+              <p class=" pt-2 pb-2" style="text-align: center; font-size: 18px;">The price for this is €50.00 (incl. VAT) and takes approximately one hour.For that you get 10/15 edited digital files in large format.</p>
+              <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" font-size: 45px; " >€50.00</h1>
+              <button class="btn btn-danger position-absolute rounded-pill  " style="bottom: 30px; left: 90px ;">Get Purchase</button>
+            </div>
+
+            <div class=" p-4  rounded-4 shadow-lg position-relative text-white " style="width: 380px ; height: 410px; background-color: #222222;">
+              <h5 class="fw-bold mt-2" style="text-align: center;">Lifestyle Photography</h5>
+              <p class=" pt-4 pb-2 " style="text-align: center; font-size: 18px; color: #f1f1f1;">Lifestyle photography takes place at your home in a relaxed setting. The price for this depends on how long we take. Inquire about the possibilities.</p>
+              <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" font-size: 45px; "  >€50.00</h1>
+              <button class="btn btn-danger position-absolute rounded-pill ms-5" style="bottom: 30px; left: 40px ;" >Get Purchase</button>
+            </div>
+
+            <div class=" p-4 bg-white rounded-4 shadow-lg position-relative" style="width: 380px; height: 410px; ">
+              <h5 class="fw-bold mt-2" style="text-align: center;">Potrait Photography</h5>
+              <p class=" pt-5 pb-2" style="text-align: center; font-size: 18px;">Portrait photography and girlfriend shoots are also possible.</p>
+              <h1 class="fw-bold position-absolute" style="top: 255px; left: 100px; font-size: 45px;" >€50.00</h1>
+              <button class="btn btn-danger position-absolute rounded-pill ms-5" style="bottom: 30px; left: 40px ;" >Get Purchase</button>
+            </div>
+          </div>
+        </div>
+        <img src="images/Decoration.png" class="position-absolute bottom-0 end-0 z-n1" alt="">
+      </div>
+</section>
+
+<!-- end  price section -->
 
 
 
