--- a/index.html
+++ b/index.html
@@ -190,25 +190,24 @@
     </div>
 </div>
 
+<img src="images/gradiant2.png" class="position-absolute object-fit-cover start-0 bottom-0" alt="">
 </div>
 <!-- end our portfolio section -->
  <!-- start price section -->
 
- <section class="mt-5 pt-5">
+ <section class="mt-5 pt-5 position-relative" >
     <div class="position-relative">
         <div class="container mx-auto">
           <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-center">
 
             <div>
               <h3 class="fw-bold fs-2" style="text-align: center;">
-                PRICES
+                Prices
               </h3>
-
             </div>
-
           </div>
 
-          <div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between gap-4 pt-5 pb-5">
+          <div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between gap-4 pt-3 pb-5">
             <div class=" p-4 bg-white rounded-4 shadow-lg position-relative" style="width: 380px; height: 410px;">
               <h5 class="fw-bold" style="text-align: center;">Children's photography /family/pregnancy/ loveshoot</h5>
 
@@ -234,9 +233,44 @@
         </div>
         <img src="images/Decoration.png" class="position-absolute bottom-0 end-0 z-n1" alt="">
       </div>
+
+      <img src="images/Ellipse 9.png" class="position-absolute object-fit-cover end-0 bottom-0 z-n1" alt="">
 </section>
 
 <!-- end  price section -->
+<!--  start testimonial section-->
+<div style="background-color:rgba(138, 71, 246, 0.218); width: 100%;" class="mt-5 ">
+    <div class="container"   >
+        <div class="row gap-5 gap-md-0 py-5">
+
+          <div class="col-12 col-md-6 mt-4 ">
+            <p ><span><img src="images/Line 1.png" alt="" class="mb-1 "></span> Testimonials</p>
+            <h2 style="font-size: 48px; font-weight: 900; line-height: 55px;">What Our Clients Say</h2>
+            <p class="mt-4 mb-3" style="font-size: 18px;" >
+                This photography website is a true gem for anyone who appreciates artistry and storytelling through the lens. The images are awe-inspiring, and the website provides an engaging and immersive experience. With a few minor enhancements in user-friendliness and performance, it could become an even more exceptional platform for showcasing photography talent.
+            </p>
+
+            <div class="d-flex  align-items-center">
+                <a href="#" class="btn position-relative rounded-pill px-4  text-dark me-3" style="background-color: #b086f4a8; text-align: end;"> <span ><img class="position-absolute object-fit-cover start-0 top-0"
+                    src="images/Ellipse 1.png" alt=""></span> <span style="font-size: 18px; margin-left: 30px;">Amane Indahnya</span></a>
+
+                    <img  style="width: 45px; margin-top: 7px; margin-left: 3px; margin-right: 3px; " src="images/arrowleft.png" alt="">
+                    <img style="width: 42px; margin-top: 7px;" src="images/arrow-right.webp" alt="">
+
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6  mt-1">
+            <div class="div2">
+                <img src="images/Rectangle 24.png" alt="">
+            </div >
+
+       </div>
+      </div>
+        </div>
+    </div>
+</div>
+<!-- end testimonial section -->
 
 
 
