including instagram feed sec

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <!-- end our portfolio section -->
  <!-- start price section -->
 
- <section class="mt-5 pt-5 position-relative" >
+ <section class="mt-5 mb-5 pt-5 position-relative" >
     <div class="position-relative">
         <div class="container mx-auto">
           <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-center">
@@ -271,6 +271,52 @@
     </div>
 </div>
 <!-- end testimonial section -->
+ <!-- start instagram feed sec-->
+
+ <div class="pt-5">
+    <div class="position-relative mt-5">
+        <div class="container mx-auto">
+          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between">
+
+            <div>
+              <h3 class="fw-bold fs-2 test-h3">
+                Instagram Feed
+              </h3>
+            </div>
+
+            <button class="btn btn-custom btn-lg rounded-pill px-3 " >Join Now</button>
+          </div>
+
+          <div class="container ">
+            <div class="row   ">
+                <div class="col-12 col-md-6  instadiv mt-3">
+                    <div class="rec35">
+                        <img src="images/Rectangle 35.png" alt="">
+                    </div>
+                    <div class="rec36">
+                        <img src="images/Rectangle 36.png" alt="">
+                    </div>
+                    <div class="rec37">
+                        <img src="images/Rectangle 37.png" alt="">
+                    </div>
+                    <div class="rec38">
+                        <img src="images/Rectangle 38.png" alt="">
+                    </div>
+                    <div class="rec39">
+                        <img src="images/Rectangle 39.png" alt="">
+                    </div>
+                    <div class="rec40">
+                        <img src="images/Rectangle 40.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+          </div>
+
+
+        <img src="images/Decoration.png" class="position-absolute bottom-0 end-0 z-n1" alt="">
+      </div>
+ </div>
 
 
 
