--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/e0a95cda2c.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -273,8 +275,8 @@
 <!-- end testimonial section -->
  <!-- start instagram feed sec-->
 
- <div class="pt-5">
-    <div class="position-relative mt-5">
+ <div class="pt-5 position-relative">
+    <div class=" mt-5">
         <div class="container mx-auto">
           <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between">
 
@@ -312,11 +314,32 @@
                 </div>
             </div>
           </div>
-
-
-        <img src="images/Decoration.png" class="position-absolute bottom-0 end-0 z-n1" alt="">
       </div>
+
+      <img src="images/gradiant2.png" class="position-absolute object-fit-cover bottom-0 start-0 z-n1" alt="">
  </div>
+ <!-- end instagram feed sec -->
+
+<!-- start footer sec -->
+<div class=" bg-black d-flex flex-row justify-content-between align-content-center mt-5 footdiv-1 w-100">
+  <div>
+   <img src="images/footerlogo.png" class="mt-4 mt-md-3 mx-auto ms-md-4 ps-2 ps-md-5  logo-img w-75 object-fit-cover mb-md-1" alt="">
+  </div>
+
+   <div>
+       <ul class="list-unstyled ul-custom d-flex flex-row gap-2 justify-content-start align-content-center text-white mt-3 " style="font-size: 12px; color: #ffffff;">
+           <li >Privacy Policy</li>
+           <li >Terms & Condition</li>
+       </ul>
+   </div>
+
+   <div class="d-flex flex-row gap-2 mt-md-2 mb-md-1 mt-3 pe-md-5 z-1  fs-4 me-md-4 pe-2 icon-custom">
+       <span class="faceicon" ><i class="fa-brands fa-facebook"></i></span>
+       <span class="insta-icon"><i class="fa-brands fa-instagram"></i></span>
+       <span class="twit-icon"><i class="fa-brands fa-square-twitter"></i></span>
+   </div>
+</div>
+<!-- end footer sec -->
 
 
 
