--- a/index1.html
+++ b/index1.html
@@ -9,19 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
-    <script src="https://kit.fontawesome.com/e0a95cda2c.js" crossorigin="anonymous"></script>
-
-    <style>
 
 
-
-    </style>
+    <link rel="stylesheet" href="style1.css">
 
   </head>
   <body>
 
-
-   <!--testmonial section-->
 
 
 
