--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
   <script src="https://kit.fontawesome.com/e0a95cda2c.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="style.css">
@@ -286,7 +288,7 @@
               </h3>
             </div>
 
-            <button class="btn btn-custom btn-lg rounded-pill px-3 " >Join Now</button>
+            <button class="btn btn-custom btn-lg rounded-pill px-4 me-md-4 " >Join Now</button>
           </div>
 
           <div class="container ">
@@ -316,24 +318,94 @@
           </div>
       </div>
 
-      <img src="images/gradiant2.png" class="position-absolute object-fit-cover bottom-0 start-0 z-n1" alt="">
+      <img src="images/gradiant1.png" class="position-absolute object-fit-cover top-0 start-0 z-n1" alt="">
+
+    </div>
  </div>
+
  <!-- end instagram feed sec -->
 
+ <!-- start Question sec -->
+ <section class="form-section mt-5 pt-5 mb-3 position-relative">
+  <img src="images/gradiant2.png" class="position-absolute object-fit-cover top-0 start-0 z-n1" alt="">
+
+  <img src="images/Ellipse 9.png" class="position-absolute object-fit-cover bottom-0 end-0 z-n1" alt="">
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <!-- Form section -->
+      <div class="col-md-6">
+        <h1 class="form-heading fw-bold fs-2 lh-sm">Have A Question?</h1>
+        <p class="form-description mt-3">
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <form>
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" >
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" >
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" rows="4" ></textarea>
+          </div>
+
+        </form>
+      </div>
+
+      <!-- Contact Info Column -->
+      <div class="col-md-5 mt-5">
+        <div class="mt-md-4 pt-md-5">
+          <div class="contact-card pt-4">
+            <h3 class="form-heading ms-2">Get In Touch!</h3>
+            <p class="ms-2 mb-4 contract-p">We love to hear from you. Our friendly team is always here to chat.</p>
+            <div class="contact-info ms-2">
+              <div class="d-flex align-items-center mb-3">
+                <i class="contact-icon bi bi-geo-alt-fill"></i>
+                <div class="d-flex flex-column ms-2">
+                  <h6 >Location:</h6>
+                  <p class="mb-2 contract-p2">199 Nueces ST, Austin, TX 78701</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center mb-4 ms-2">
+                <i class="contact-icon bi bi-telephone-fill"></i>
+                <div class="d-flex flex-column ms-2">
+                  <h6>Phone:</h6>
+                  <p class="mb-0 contract-p2">+1(456)666-4077</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center ms-2 pb-2">
+                <i class="contact-icon bi bi-envelope-fill"></i>
+                <div class="d-flex flex-column ms-2">
+                  <h6>E-mail:</h6>
+                  <p class="mb-0 contract-p2">support@free.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- start footer sec -->
-<div class=" bg-black d-flex flex-row justify-content-between align-content-center mt-5 footdiv-1 w-100">
+<div class=" bg-black d-flex flex-row justify-content-between align-content-center footdiv-1 w-100">
   <div>
-   <img src="images/footerlogo.png" class="mt-4 mt-md-3 mx-auto ms-md-4 ps-2 ps-md-5  logo-img w-75 object-fit-cover mb-md-1" alt="">
+   <img src="images/footerlogo.png" class="mt-4 mt-md-3 mx-auto ms-md-5 ps-2 ps-md-5  logo-img w-75 object-fit-cover mb-md-3" alt="">
   </div>
 
    <div>
-       <ul class="list-unstyled ul-custom d-flex flex-row gap-2 justify-content-start align-content-center text-white mt-3 " style="font-size: 12px; color: #ffffff;">
-           <li >Privacy Policy</li>
-           <li >Terms & Condition</li>
+       <ul class="list-unstyled ul-custom d-flex flex-row  justify-content-start align-content-center text-white mt-3 me-4 " style="font-size: 12px; color: #ffffff; text-align: center;" >
+           <li class="me-md-2">Privacy Policy</li>
+           <li class="ms-md-2">Terms & Condition</li>
        </ul>
    </div>
 
-   <div class="d-flex flex-row gap-2 mt-md-2 mb-md-1 mt-3 pe-md-5 z-1  fs-4 me-md-4 pe-2 icon-custom">
+   <div class="d-flex flex-row gap-2 mt-md-2 mb-md-3 mt-3 pe-md-5 z-1  fs-4 me-md-5 pe-2 icon-custom">
        <span class="faceicon" ><i class="fa-brands fa-facebook"></i></span>
        <span class="insta-icon"><i class="fa-brands fa-instagram"></i></span>
        <span class="twit-icon"><i class="fa-brands fa-square-twitter"></i></span>
@@ -346,13 +418,6 @@
 
 
 
-
-
-
-
-
-
-<br><br><br><br><br>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
